@@ -5,6 +5,10 @@ plugins {
 group = 'me.downn_falls'
 version = '1.0-SNAPSHOT'
 
+test {
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
 repositories {
     mavenCentral()
     maven {
@@ -25,9 +29,9 @@ repositories {
 
 dependencies {
     compileOnly("org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT")
-    compileOnly 'com.github.FrancoBM12:API-MagicCosmetics:2.2.9'
-    implementation 'de.tr7zw:item-nbt-api:2.11.3'
+    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.zaxxer:HikariCP:6.2.1'
+    implementation 'org.jetbrains:annotations:24.0.1'
 
 }
 
